// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-menu forwards size prop changes to menu items 1`] = `
<ld-menu>
  <mock:shadow-root>
    <ul class="ld-menu" part="list" role="menu">
      <slot></slot>
    </ul>
  </mock:shadow-root>
  <ld-menuitem>
    <mock:shadow-root>
      <li class="ld-menuitem" role="menuitem">
        <ld-button class="ld-menuitem__button" justifycontent="start" ldtabindex="0" mode="neutral-ghost" size="lg" type="button">
          <slot></slot>
        </ld-button>
      </li>
    </mock:shadow-root>
    Menu item 1
  </ld-menuitem>
  <ld-menuitem-group>
    <mock:shadow-root>
      <li class="ld-menuitem-group" role="none">
        <ul class="ld-menuitem-group__list" role="group">
          <slot></slot>
        </ul>
      </li>
    </mock:shadow-root>
    <ld-menuitem>
      <mock:shadow-root>
        <li class="ld-menuitem" role="menuitem">
          <ld-button class="ld-menuitem__button" justifycontent="start" ldtabindex="-1" mode="neutral-ghost" size="lg" type="button">
            <slot></slot>
          </ld-button>
        </li>
      </mock:shadow-root>
      Menu item 2
    </ld-menuitem>
    <ld-menuitem>
      <mock:shadow-root>
        <li class="ld-menuitem" role="menuitem">
          <ld-button class="ld-menuitem__button" justifycontent="start" ldtabindex="-1" mode="neutral-ghost" size="lg" type="button">
            <slot></slot>
          </ld-button>
        </li>
      </mock:shadow-root>
      Menu item 3
    </ld-menuitem>
  </ld-menuitem-group>
</ld-menu>
`;

exports[`ld-menu forwards size prop to menu items 1`] = `
<ld-menu>
  <mock:shadow-root>
    <ul class="ld-menu" part="list" role="menu">
      <slot></slot>
    </ul>
  </mock:shadow-root>
  <ld-menuitem>
    <mock:shadow-root>
      <li class="ld-menuitem" role="menuitem">
        <ld-button class="ld-menuitem__button" justifycontent="start" ldtabindex="0" mode="neutral-ghost" size="sm" type="button">
          <slot></slot>
        </ld-button>
      </li>
    </mock:shadow-root>
    Menu item 1
  </ld-menuitem>
  <ld-menuitem-group>
    <mock:shadow-root>
      <li class="ld-menuitem-group" role="none">
        <ul class="ld-menuitem-group__list" role="group">
          <slot></slot>
        </ul>
      </li>
    </mock:shadow-root>
    <ld-menuitem>
      <mock:shadow-root>
        <li class="ld-menuitem" role="menuitem">
          <ld-button class="ld-menuitem__button" justifycontent="start" ldtabindex="-1" mode="neutral-ghost" size="sm" type="button">
            <slot></slot>
          </ld-button>
        </li>
      </mock:shadow-root>
      Menu item 2
    </ld-menuitem>
    <ld-menuitem>
      <mock:shadow-root>
        <li class="ld-menuitem" role="menuitem">
          <ld-button class="ld-menuitem__button" justifycontent="start" ldtabindex="-1" mode="neutral-ghost" size="sm" type="button">
            <slot></slot>
          </ld-button>
        </li>
      </mock:shadow-root>
      Menu item 3
    </ld-menuitem>
  </ld-menuitem-group>
</ld-menu>
`;

exports[`ld-menu renders 1`] = `
<ld-menu>
  <mock:shadow-root>
    <ul class="ld-menu" part="list" role="menu">
      <slot></slot>
    </ul>
  </mock:shadow-root>
  <ld-menuitem>
    Menu item
  </ld-menuitem>
</ld-menu>
`;
